# delphes

./: .clang-format  .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  CREDITS  DelphesEnv.sh  LICENSE  Makefile  NOTICE  README  README.md  README_4LHCb  README_EIC.md  configure  goBs.C  goKs.C  goKsKs.C  validation.sh
addons/Pythia8/: CMakeLists.txt  DelphesPythia8.cpp  DelphesPythia8Reader.cc  PileUpMergerPythia8.cc
addons/Python/: CMakeLists.txt  Module.cc  PyDelphes.cc  PyDelphes.h  PyDelphesConfReader.cc  PyDelphesConfReader.h  PyDelphesEvent.cc  PyDelphesEvent.h  PyDelphesParameters.cc  PyDelphesParameters.h
cards/: CLICdet_BTag_70.tcl  CLICdet_BTagging.tcl  CLICdet_JetReco.tcl  CMS_PhaseII_0PU.tcl  CMS_PhaseII_140PU_conf4.tcl  CMS_PhaseII_200PU.tcl  CMakeLists.txt  converter_card.tcl  delphes_card_ALEPH.tcl  delphes_card_ATLAS.tcl  delphes_card_ATLAS_PileUp.tcl  delphes_card_CEPC.tcl  delphes_card_CLD.tcl  delphes_card_CLICdet.tcl  delphes_card_CLICdet_1500GeV.tcl  delphes_card_CLICdet_3000GeV.tcl  delphes_card_CLICdet_380GeV.tcl  delphes_card_CLICdet_Stage1.tcl  delphes_card_CLICdet_Stage2.tcl  delphes_card_CLICdet_Stage3.tcl  delphes_card_CLICdet_Stage3_fcal.tcl  delphes_card_CMS.py  delphes_card_CMS.tcl  delphes_card_CMS_Blind.tcl  delphes_card_CMS_CSCCluster.tcl  delphes_card_CMS_NoFastJet.tcl  delphes_card_CMS_Phase_II_140PileUp_upgrade_Tracker4p0.tcl  delphes_card_CMS_PileUp.py  delphes_card_CMS_PileUp.tcl  delphes_card_CMS_Unblind.tcl  delphes_card_CMS_blind.tcl  delphes_card_CMS_simple.tcl  delphes_card_CircularEE.tcl  delphes_card_DELPHI.tcl  delphes_card_FCC.tcl  delphes_card_FCC_basic.tcl  delphes_card_FCCeeDetWithSiTracking.tcl  delphes_card_FCCeh.tcl  delphes_card_HLLHC.tcl  delphes_card_IDEA.tcl  (+18 more)
cards/ATLAS_Run2/: delphes_card_ATLAS_Run2.tcl  parameter_fits.ipynb  test.txt
cards/CLIC/: CLICdet_BTag_70.tcl  CLICdet_BTagging.tcl  CLICdet_BTagging_JER.tcl  CLICdet_BeamCalF_Binning.tcl  CLICdet_BeamCalR_Binning.tcl  CLICdet_BeamCal_Efficiency_Stage3.tcl  CLICdet_BeamCal_EnergyFractions.tcl  CLICdet_BeamCal_Resolution_Stage3.tcl  CLICdet_JetFlavorAssociation.tcl  CLICdet_JetFlavorAssociation_JER.tcl  CLICdet_JetScale.tcl  CLICdet_JetScale_1500.tcl  CLICdet_JetSmearing_1500.tcl  CLICdet_LumiCalF_Binning.tcl  CLICdet_LumiCalR_Binning.tcl  CLICdet_LumiCal_Efficiency_Stage3.tcl  CLICdet_LumiCal_Resolution_Stage3.tcl  CLICdet_TauTagging.tcl  CLICdet_TauTagging_JER.tcl
cards/CLICdet/: CLICdet_BTagging.tcl  CLICdet_JetFlavorAssociation.tcl  CLICdet_JetReco.tcl  CLICdet_JetScale.tcl  CLICdet_JetScale_1500.tcl  CLICdet_JetSmearing.tcl  CLICdet_TauTagging.tcl
cards/CMS_PhaseII/: CMS_PhaseII_0PU.tcl  CMS_PhaseII_0PU_noHGCAL.tcl  CMS_PhaseII_0PU_v02.tcl  CMS_PhaseII_1000PU_MLWS.tcl  CMS_PhaseII_140PU_v02.tcl  CMS_PhaseII_200PU.tcl  CMS_PhaseII_200PU_NoHGCAL_v03.tcl  CMS_PhaseII_200PU_noHGCAL.tcl  CMS_PhaseII_200PU_v02.tcl  CMS_PhaseII_200PU_v03.tcl  CMS_PhaseII_200PU_v03_nodtf.tcl  CMS_PhaseII_200PU_v04.tcl  CMS_PhaseII_Substructure_0PU.tcl  CMS_PhaseII_Substructure_200PU.tcl  CMS_PhaseII_Substructure_PIX4022_0PU.tcl  CMS_PhaseII_Substructure_PIX4022_200PU.tcl  (+13 more)
classes/: CMakeLists.txt  ClassesLinkDef.h  DelphesCaloData.cc  DelphesCaloData.h  DelphesClasses.cc  DelphesClasses.h  DelphesConfReader.h  DelphesCscClusterFormula.cc  DelphesCscClusterFormula.h  DelphesCylindricalFormula.cc  DelphesCylindricalFormula.h  DelphesDisplay.cc  DelphesDisplay.h  DelphesFactory.cc  DelphesFactory.h  DelphesFilter.cc  DelphesFilter.h  DelphesFormula.cc  DelphesFormula.h  DelphesHepMC2Reader.cc  DelphesHepMC2Reader.h  DelphesHepMC3Reader.cc  DelphesHepMC3Reader.h  DelphesHepMCReader.cc  DelphesHepMCReader.h  DelphesLHEFReader.cc  DelphesLHEFReader.h  DelphesLongFormula.cc  DelphesLongFormula.h  DelphesModel.cc  DelphesModel.h  DelphesModule.cc  DelphesModule.h  DelphesModuleFactory.h  DelphesParameters.cc  DelphesParameters.h  DelphesPileUpReader.cc  DelphesPileUpReader.h  DelphesPileUpWriter.cc  DelphesPileUpWriter.h  (+19 more)
converters/: CMakeLists.txt  hepmc2pileup.cpp  lhco2root.cpp  pileup2root.cpp  root2lhco.cpp  root2pileup.cpp  stdhep2pileup.cpp
display/: CMakeLists.txt  Delphes3DGeometry.cc  Delphes3DGeometry.h  DelphesBranchElement.cc  DelphesBranchElement.h  DelphesCaloData.cc  DelphesCaloData.h  DelphesDisplay.cc  DelphesDisplay.h  DelphesEventDisplay.cc  DelphesEventDisplay.h  DelphesHtmlSummary.cc  DelphesHtmlSummary.h  DelphesPlotSummary.cc  DelphesPlotSummary.h  DisplayLinkDef.h
examples/: B0KsKsPulls.h  BsPulls.h  CMakeLists.txt  CaloGrid.cpp  DelphesBrowser.C  DelphesCMSFWLite.cpp  DelphesCMSFWLite.sh  DelphesProMC.cpp  DelphesProMC.sh  DenseTracks.C  EventDisplay.C  Example1.C  Example1.cpp  Example1.py  Example2.C  Example3.C  Example4.C  Example5.C  Example5.py  Example6.C  Example7.C  Example7.py  Example8.py  ExampleClCount.C  ExampleCscCluster.py  ExampleKsVtxFit.C  ExamplePVtxFind.C  ExamplePVtxFit.C  ExamplePVtxFitEC.C  ExternalFastJetBasic.cpp  ExternalFastJetHepMC.cpp  GeoIDEA_NewDCH.txt  KalmanCheck.c  KsPulls.h  LoadPVtxFit.C  LoadTrk.c  MemoryUsage.C  ProcessingTime.C  StandaloneHepMC.cpp  VList.cc  (+28 more)
modules/: AngularSmearing.cc  AngularSmearing.h  BTagging.cc  BTagging.h  BTaggingCMS.cc  BTaggingCMS.h  BeamSpotFilter.cc  BeamSpotFilter.h  CMakeLists.txt  Calorimeter.cc  Calorimeter.h  Cloner.cc  Cloner.h  ClusterCounting.cc  ClusterCounting.h  ConstituentFilter.cc  ConstituentFilter.h  CscClusterEfficiency.cc  CscClusterEfficiency.h  CscClusterId.cc  CscClusterId.h  DecayFilter.cc  DecayFilter.h  Delphes.cc  Delphes.h  DenseTrackFilter.cc  DenseTrackFilter.h  DualReadoutCalorimeter.cc  DualReadoutCalorimeter.h  EICPIDDetector.cc  EICPIDDetector.h  Efficiency.cc  Efficiency.h  EnergyLoss.cc  EnergyLoss.h  EnergyScale.cc  EnergyScale.h  EnergySmearing.cc  EnergySmearing.h  ExampleModule.cc  (+111 more)
readers/: CMakeLists.txt  DelphesCMSFWLite.cpp  DelphesHepMC.cpp  DelphesHepMC2.cpp  DelphesHepMC3.cpp  DelphesLHEF.cpp  DelphesProIO.cpp  DelphesProMC.cpp  DelphesProMC.py  DelphesPythia8.cpp  DelphesROOT.cpp  DelphesRun.cpp  DelphesSTDHEP.cpp
(+229 files in other folders)
